<resources>

    <string name="app_name">criSMS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">criSMS</string>
	<string name="message">Message</string>
    <string name="send">Send</string>
    <string name="to">To</string>
    <string name="contact">To</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="username_hint">Username</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Password</string>
    <string name="AddMessagesToOutbox">Add messages to outbox</string>
    <string name="login_button">Login</string>
    <string name="login_success">Login successful</string>
    <string name="login_auth_failure">Wrong username or password</string>
    <string name="login_general_failure">Unable to login. Please try again&#8230;</string>
    <string name="send_general_failure">Unable to send message. Please try again&#8230;</string>
    <string name="send_success">Message sent</string>
    <string name="sender_id">Sender Id</string>

</resources>